@@ -264,6 +264,7 @@ public:
 	bool	LoadCharacterTribute(uint32 character_id, PlayerProfile_Struct* pp);
 	bool	LoadCharacterPotions(uint32 character_id, PlayerProfile_Struct* pp);
 	bool	LoadCharacterLeadershipAA(uint32 character_id, PlayerProfile_Struct* pp);
+	bool	LoadCharacterLDONStats(uint32 character_id, PlayerProfile_Struct* pp);
 
 	/* Character Data Saves */ 
 	bool	SaveCharacterBindPoint(uint32 character_id, uint32 zone_id, uint32 instance_id, float x, float y, float z, float heading, uint8 is_home);
